# Enterprise-RAG-Chatbot

./: .dockerignore  .gitignore  README.md  login.json  main.py  pyproject.toml  pytorch_nightly.txt
apps/api/: Dockerfile  main.py  models.py
apps/api/core/: config.py  db.py  deps.py  security.py
apps/web/: Dockerfile  app.py  index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
data/raw/internal/: policies.md
data/raw/internal/engineering/: dev_environment.md
data/raw/internal/hr/: benefits.md  pto_policy.md
data/raw/internal/it/: it_support.md  vpn_setup.md
data/raw/internal/research/: rag_notes.md
data/raw/public/: company_faq.md  onboarding_checklist.md
data/raw/restricted/: vpn.md
data/raw/restricted/finance/: compensation_bands.md
data/raw/restricted/security/: incident_response.md  vpn_secrets.md
infra/docker/: docker-compose.yml
infra/docker/postgres/: init.sql
rag/experiments/: __init__.py
rag/experiments/faiss/: __init__.py  build_index.py  vectorstore.py
rag/generation/: citations_only.py  ollama_client.py
rag/ingest/: build_index.py  chunking.py  loaders.py  pg_ingest.py  smoke_retrieval.py
rag/retrieval/: pgvector_store.py  vectorstore.py
scripts/: debug_vpn.py  inspect_users_table.py  migrate_fts.py  seed_users.py  smoke_api.py  test.py  test_api.ps1
storage/docstore/: chunks.jsonl
storage/faiss/: index.faiss
