[project]
name = "rag-enterprise-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "markdown>=3.10",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "torch",
    "torchvision",
    "torchaudio",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.40.0",
    "requests>=2.32.5",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }
