[project]
name = "rag-enterprise-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "markdown>=3.10",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "torch==2.5.1; platform_system != 'Windows'",
    "torch; platform_system == 'Windows'",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.40.0",
    "requests>=2.32.5",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "pgvector>=0.4.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.21",
    "bcrypt<4",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }


#[[tool.uv.index]]
#name = "pytorch-nightly"
#url = "https://download.pytorch.org/whl/nightly/cu128"
#explicit = true

#[tool.uv.sources]
#torch = { index = "pytorch-nightly" }
#torchvision = { index = "pytorch-nightly" }
#torchaudio = { index = "pytorch-nightly" }
