[project]
name = "rag-enterprise-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "torch==2.5.1; platform_system != 'Windows'",
    "torch; platform_system == 'Windows'",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "pgvector>=0.4.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
